# qwen-rotor-quantizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: schema-sync.yml
bench/: benchmark_kv.py  phase3_compare_report.py  quality_gate_suite.py  report_template.md
docs/: vllm_integration_blueprint.md
examples/: prefill_decode_demo.py
src/rotorquant/: __init__.py  bitpack.py  config.py  layout.py  oracle.py  quantize.py  qwen_layermap.py  rotor_math.py  schema.py
src/rotorquant/adapters/: vllm_adapter_contract.py  vllm_rotorquant_adapter.py
src/rotorquant/kernels/: __init__.py  triton_kv_dequant.py  triton_kv_quant.py
src/rotorquant/runtime/: cache_manager.py  phase_switch.py
tests/: test_kernel_parity.py  test_oracle_fixture.py  test_pack_unpack.py  test_rotor_math.py  test_runtime_mixed_layers.py  test_schema.py  test_vllm_adapter_flow.py
