[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rotorquant-poc"
version = "0.1.0"
description = "RotorQuant POC for Qwen hybrid KV cache compression."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "triton>=2.2; platform_system == 'Linux'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
